--- a/WebProject/contactUs.html
+++ b/WebProject/contactUs.html
@@ -20,7 +20,36 @@
             </div>
         </header>
         <div class="content">
-
+            <form name="signup">
+                <fieldset>
+                    <legend>Sign Up</legend>
+                    <table>
+                        <tr>
+                            <td align="right"><label>Username: </label></td>
+                            <td><input type="text" name="uname"/><br/></td>
+                        </tr>
+                        <tr>
+                            <td align="right"><label>First Name: </label></td>
+                            <td><input type="text" name="fname"/><br/></td>
+                        </tr>
+                        <tr>
+                            <td align="right"><lable>Last Name: </lable></td>
+                            <td><input type="text" name="lname"/><br/></td>
+                        </tr>
+                        <tr>
+                            <td align="right"><label>Password: </label></td>
+                            <td><input type="password" name="passw"/><br/></td>
+                        </tr>
+                        <tr>
+                            <td align="right"><label>Confirm Password: </label></td>
+                            <td><input type="password" name="cpassw"/><br/></td>
+                        </tr>
+                        <tr>
+                            <td colspan="2" align="center"><input type="submit"/></td>
+                        </tr>
+                    </table>
+                </fieldset>
+            </form>
         </div>
         <footer>
             Copyright &copy; Erik Zamora, Antonio Ollis
